@@ -1,3 +1,8 @@
+2007-11-30  J. Tang  <jtang@tresys.com>
+
+	* Added seaudit_filter_set_avcname() and
+	seaudit_filter_get_avcname(); updated unit tests.
+
 2007-11-02  J. Tang  <jtang@tresys.com>
 
 	* Ported bug fixes in branches/setools-devel to trunk.  This is
